zabawy ze stylami

--- a/css/blog.css
+++ b/css/blog.css
@@ -1,4 +1,4 @@
-/* http://www.colourlovers.com/palette/845780/No_idea */
+﻿/* http://www.colourlovers.com/palette/845780/No_idea */
 
 @font-face {
   font-family: Cyklop;
@@ -41,7 +41,7 @@ html {
   /* http://www.hicksdesign.co.uk/journal/forcing-scrollbars-now-even-better */
   height: 100%; 
   margin-bottom: 1px;
-  background-color: #FEFEEB; 
+  background-color: #C5CBC7; 
   margin: 0 auto 0 44px; 
 }
 
