--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,8 @@
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ page.title }}</title>
-   <meta name="author" content="Imię Nazwisko" />
-   <link href="http://sigma.inf.ug.edu.pl/~login_na_sigmie/atom.xml" rel="alternate" 
+   <meta name="author" content="Paweł Majewski" />
+   <link href="http://sigma.inf.ug.edu.pl/~pmajewski/atom.xml" rel="alternate" 
          title="Imię Nazwisko" type="application/atom+xml" />
 
    <link rel="stylesheet" href="../../../../css/syntax.css" type="text/css" />
@@ -19,7 +19,7 @@
 
   <div class="span-21" id="header">
     <div id="logo" class="push-1 span-7">
-      <a href="/~login_na_sigmie/blog">MÓJ@BLOG</a>
+      <a href="/~pmajewski/blog">Paweł Majewski - blog</a>
     </div>
     <div class="span-13 last">
       <div class="append-7" id="links">
