--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -1,30 +1,45 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="pl" lang="pl-pl">
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ page.title }}</title>
-   <meta name="author" content="Imię Nazwisko" />
-   <link href="http://sigma.inf.ug.edu.pl/~login_na_sigmie/blog/atom.xml" rel="alternate" 
-         title="Imię Nazwisko" type="application/atom+xml" />
-
+   <meta name="author" content="Paweł Majewski" />
+   <link href="http://sigma.inf.ug.edu.pl/~pmajewski/blog/atom.xml" rel="alternate" 
+         title="Paweł Majewski" type="application/atom+xml" />
+      <div class="append-7" id="links">
+        <a href="/~pmajewski/blog">home</a>
+      </div>
    <link rel="stylesheet" href="css/syntax.css" type="text/css" />
    <link rel="stylesheet" href="css/screen.css" type="text/css" media="screen, projection" />
    <link rel="stylesheet" href="css/blog.css" type="text/css" media="screen, projection" />
+   <link rel="stylesheet" href="css/style.css" type="text/css" media="screen, projection" />
 </head>
 <body>
 
-<div class="site span-21"><!--  showgrid -->
+<div class="site span-21" style="border: 1px solid black;" class="radious_15"><!--  showgrid -->
 
-  <div class="span-21" id="header">
-    <div id="logo" class="push-1 span-7">
-      <a href="/~login_na_sigmie/blog">MÓJ@BLOG</a>
+  <div class="span-21" id="header" style="border: 1px solid black;">
+    <div id="logo" class="push-1 span-7" style="border:1px;">
+      <a href="/~pmajewski/blog"><img src="images/logo1.png"></a>
     </div>
-    <div class="span-13 last">
+    <div class="span-13 last" style="border: 1px solid black;">
       <div class="append-7" id="links">
-        <a href="/~login_na_sigmie">home</a>
+        <a href="/~pmajewski/blog">home </a>
+	
       </div>
+      <div class="append-7" id="links" style="border: 1px solid black;">
+        <a href="https://github.com/wbzyl/jblog">szablon jblog'a</a>
+      </div>
+      <div class="append-7" id="links" style="border: 1px solid black;">
+        <a href="http://www.html5rocks.com/">html 5 rocks</a>
+      </div>
+      <div class="append-7" id="links" style="border: 1px solid black;">
+        <a href="http://www.html5rocks.com/">html 5 boilerplate</a>
+      </div>
+
+
     </div>
   </div>
 
