dodane rounded corners

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -18,8 +18,8 @@
 </head>
 <body>
 
-<div class="site span-21" style="border: 1px solid black;" class="radious_15"><!--  showgrid -->
-
+<div class="site span-21 rounded_15"><!--  showgrid -->
+kkkkkk
   <div class="span-21" id="header" style="border: 1px solid black;">
     <div id="logo" class="push-1 span-7" style="border:1px;">
       <a href="/~pmajewski/blog"><img src="images/logo1.png"></a>
