dodane wysrodkowanie bloga, wstawione background image

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -17,35 +17,30 @@
    <link rel="stylesheet" href="css/style.css" type="text/css" media="screen, projection" />
 </head>
 <body>
-
 <div class="site span-21 rounded_15"><!--  showgrid -->
-kkkkkk
-  <div class="span-21" id="header" style="border: 1px solid black;">
+    <div class="span-21" id="header" style="border: 1px solid black;">
     <div id="logo" class="push-1 span-7" style="border:1px;">
       <a href="/~pmajewski/blog"><img src="images/logo1.png"></a>
     </div>
-    <div class="span-13 last" style="border: 1px solid black;">
-      <div class="append-7" id="links">
-        <a href="/~pmajewski/blog">home </a>
-	
-      </div>
-      <div class="append-7" id="links" style="border: 1px solid black;">
-        <a href="https://github.com/wbzyl/jblog">szablon jblog'a</a>
-      </div>
-      <div class="append-7" id="links" style="border: 1px solid black;">
-        <a href="http://www.html5rocks.com/">html 5 rocks</a>
-      </div>
-      <div class="append-7" id="links" style="border: 1px solid black;">
-        <a href="http://www.html5rocks.com/">html 5 boilerplate</a>
-      </div>
-
-
-    </div>
+    <nav class="span-13 last" style="border: 1px solid black;">
+	<div class="append-7" id="links">
+		<a href="/~pmajewski/blog">home </a>
+	</div>
+	<div class="append-7" id="links" style="border: 1px solid black;">
+		<a href="https://github.com/wbzyl/jblog">szablon jblog'a</a>
+	</div>
+	<div class="append-7" id="links" style="border: 1px solid black;">
+		<a href="http://www.html5rocks.com/">html 5 rocks</a>
+	</div>
+	<div class="append-7" id="links" style="border: 1px solid black;">
+		<a href="http://www.html5rocks.com/">html 5 boilerplate</a>
+	</div>
+    </nav>
   </div>
 
   {{ content }}
 
-</div>
+</div></div>
 
 </body>
 </html>
