dodany cień box shadow

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -20,7 +20,9 @@
 <div class="site span-21 rounded_15"><!--  showgrid -->
     <div class="span-21" id="header" style="border: 1px solid black;">
     <div id="logo" class="push-1 span-7" style="border:1px;">
-      <a href="/~pmajewski/blog"><img src="images/logo1.png"></a>
+      <a href="/~pmajewski/blog"><img src="images/logo1.png" style="  box-shadow: 30px -20px 20px #999;
+  -webkit-box-shadow: 30px -20px 20px #999;
+  -moz-box-shadow: 30px -20px 20px #999;"></a>
     </div>
     <nav class="span-13 last" style="border: 1px solid black;">
 	<div class="append-7" id="links">
