--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -8,7 +8,8 @@
    <meta name="author" content="Paweł Majewski" />
    <link href="http://sigma.inf.ug.edu.pl/~pmajewski/blog/atom.xml" rel="alternate" 
          title="Paweł Majewski" type="application/atom+xml" />
-      <div class="append-7" id="links">
+    
+    <div class="append-7" id="links">
         <a href="/~pmajewski/blog">home</a>
       </div>
    <link rel="stylesheet" href="css/syntax.css" type="text/css" />
@@ -16,15 +17,34 @@
    <link rel="stylesheet" href="css/blog.css" type="text/css" media="screen, projection" />
    <link rel="stylesheet" href="css/style.css" type="text/css" media="screen, projection" />
 </head>
+
+
 <body>
-<div class="site span-21 rounded_15"><!--  showgrid -->
+<div class="site span-21 rounded_15 d_border"><!--  w stylu dodane rounded corners-->
+	<div>
+		 <a href="/~pmajewski/blog"><img src="images/logo1.png" class="logotyp"></a>
+	</div>
+	<div class="d_border width300">
+		<ul>
+			<li><a href="/~pmajewski/blog" class="toplink">home </a>
+			<li><a href="https://github.com/wbzyl/jblog" class="toplink">szablon jblog'a</a>
+			<li><a href="http://www.html5rocks.com/" class="toplink">html 5 rocks</a>
+			<li><a href="http://www.html5rocks.com/" class="toplink">html 5 boilerplate</a>
+		</ul>	
+	</div>
+	<br>
+<br>
+<br>
+<br>
+<br>
+<br>
     <div class="span-21" id="header" style="border: 1px solid black;">
     <div id="logo" class="push-1 span-7" style="border:1px;">
-      <a href="/~pmajewski/blog"><img src="images/logo1.png" style="  box-shadow: 30px -20px 20px #999;
-  -webkit-box-shadow: 30px -20px 20px #999;
-  -moz-box-shadow: 30px -20px 20px #999;"></a>
+     
     </div>
-    <nav class="span-13 last" style="border: 1px solid black;">
+   
+<!--menu right top --> 
+ <nav class="" style="border: 1px solid black; padding-left: 300px; float:left; width:100px;">
 	<div class="append-7" id="links">
 		<a href="/~pmajewski/blog">home </a>
 	</div>
