--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
    <link rel="stylesheet" href="../../../../css/syntax.css" type="text/css" />
    <link rel="stylesheet" href="../../../../css/screen.css" type="text/css" media="screen, projection" />
    <link rel="stylesheet" href="../../../../css/blog.css" type="text/css" media="screen, projection" />
+<link rel="stylesheet" href="css/style.css" type="text/css" media="screen, projection" />
 </head>
 <body>
 
