--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -6,63 +6,37 @@
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ page.title }}</title>
    <meta name="author" content="Paweł Majewski" />
-   <link href="http://sigma.inf.ug.edu.pl/~pmajewski/blog/atom.xml" rel="alternate" 
-         title="Paweł Majewski" type="application/atom+xml" />
-    
-    <div class="append-7" id="links">
-        <a href="/~pmajewski/blog">home</a>
-      </div>
-   <link rel="stylesheet" href="css/syntax.css" type="text/css" />
+ <title="jblog HTML5 - Paweł Majewski" type="application/atom+xml" />
+ <link href="http://sigma.inf.ug.edu.pl/~pmajewski/blog/atom.xml" rel="alternate" 
+  <link rel="stylesheet" href="css/syntax.css" type="text/css" />
    <link rel="stylesheet" href="css/screen.css" type="text/css" media="screen, projection" />
    <link rel="stylesheet" href="css/blog.css" type="text/css" media="screen, projection" />
    <link rel="stylesheet" href="css/style.css" type="text/css" media="screen, projection" />
 </head>
-
-
 <body>
-<div class="site span-21 rounded_15 d_border"><!--  w stylu dodane rounded corners-->
-	<div>
+<header>	
+	<text>Ten blog został stworzony w celu przedstawienia wybranych możliwości <m> HTML5    </m>    </text>
+</header>
+
+<div class="site span-21 rounded_10 d_border background_bg1"><!--  w stylu dodane rounded corners-->
+	<div class="float">
 		 <a href="/~pmajewski/blog"><img src="images/logo1.png" class="logotyp"></a>
 	</div>
-	<div class="d_border width300">
+	<nav class="d_border menu_right float site rounded_5">
 		<ul>
-			<li><a href="/~pmajewski/blog" class="toplink">home </a>
+			<li><a href="/~pmajewski/blog" class="toplink">home</a>
 			<li><a href="https://github.com/wbzyl/jblog" class="toplink">szablon jblog'a</a>
 			<li><a href="http://www.html5rocks.com/" class="toplink">html 5 rocks</a>
-			<li><a href="http://www.html5rocks.com/" class="toplink">html 5 boilerplate</a>
+			<li><a href="http://html5boilerplate.com/" class="toplink">html 5 boilerplate</a>
+			<li><a href="http://www.delicious.com/" class="toplink">delicious</a>
+			<li><a href="http://www.delicious.com/" class="toplink">moja galeria</a>
 		</ul>	
-	</div>
-	<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-    <div class="span-21" id="header" style="border: 1px solid black;">
-    <div id="logo" class="push-1 span-7" style="border:1px;">
-     
-    </div>
-   
-<!--menu right top --> 
- <nav class="" style="border: 1px solid black; padding-left: 300px; float:left; width:100px;">
-	<div class="append-7" id="links">
-		<a href="/~pmajewski/blog">home </a>
-	</div>
-	<div class="append-7" id="links" style="border: 1px solid black;">
-		<a href="https://github.com/wbzyl/jblog">szablon jblog'a</a>
-	</div>
-	<div class="append-7" id="links" style="border: 1px solid black;">
-		<a href="http://www.html5rocks.com/">html 5 rocks</a>
-	</div>
-	<div class="append-7" id="links" style="border: 1px solid black;">
-		<a href="http://www.html5rocks.com/">html 5 boilerplate</a>
-	</div>
-    </nav>
-  </div>
+	</nav>
+
 
   {{ content }}
 
 </div></div>
-
+<footer><p> &copy;&nbsp;2011 Paweł Majewski</p></footer>
 </body>
 </html>
