--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,21 @@
 /*shadow*/
 .logotyp
 	{
-		margin-top:10px;
-		margin-left:10px;
+	margin-top:10px;
+	margin-left:10px;
 	width:503 px;
 	height:246 px;
 	box-shadow: 30px -20px 20px #999;
 	-webkit-box-shadow: 30px 20px 20px #999;
 	-moz-box-shadow: 30px 20px 20px #999;
   }
+.menu_right
+	{
+	width: 250px;
+			margin-top:10px;
+		margin-left:80px;
+		 background: #F8ECE0;
+	}
   A.toplink
   {
 	font-family: Arial;
@@ -21,23 +28,60 @@
 	text-decoration: none;
 	 color: #663300; 
 	} 
-  
+   A.post
+  {
+	font-family: Arial;
+	text-decoration: none;
+	 color: ##292A0A; 
+	}
+   A.post:hover
+  {
+	font-family: Arial;
+	text-decoration: none;
+	 color: ##292A0A; 
+	}  
   
 /*zaokr¹glone naro¿niki*/
-.rounded_15 {
-	-moz-border-radius: 15px;
-	border-radius: 15px;
+.rounded_10 {
+	-moz-border-radius: 10px;
+	border-radius: 10px;
 }
+.rounded_5 {
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+}
+
+.background_bg1
+	{
+	background: url('../images/bg1.gif') repeat scroll 0 0;
+	}
 .d_border 
 {
 	border: 1px solid #384146;
+ }
+.d_border_jasny
+{
+	border: 1px solid ##BDBDBD;
  }
  
  .width600
  {
 width: 600px;
 }
-.width340
+
+.float
+{ float: left;}
+
+header
 {
-width: 300px;
+ font-variant: small-caps;
+ width:940px;
+ text-align: right;
+padding-right:10px;
+ }
+m
+{
+color: #610B0B;
+
 }
+     
