--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -14,13 +14,14 @@
    <link rel="stylesheet" href="css/style.css" type="text/css" media="screen, projection" />
 </head>
 <body>
-<header>	
-	<text>Ten blog został stworzony w celu przedstawienia wybranych możliwości <m> HTML5    </m>    </text>
-</header>
-
-<div class="site span-21 rounded_10 d_border background_bg1"><!--  w stylu dodane rounded corners-->
+   <header>	
+	<text>Ten blog został stworzony w celu przedstawienia wybranych możliwości
+   	   <m>HTML5</m>
+       </text>
+   </header>
+   <div class="site span-21 rounded_10 d_border background_bg1"><!--  w stylu dodane rounded corners-->
 	<div class="float">
-		 <a href="/~pmajewski/blog"><img src="images/logo1.png" class="logotyp"></a>
+		 <a href="/~pmajewski/blog"><img src="images/logo.gif" class="logotyp"></a>
 	</div>
 	<nav class="d_border menu_right float site rounded_5">
 		<ul>
@@ -37,6 +38,6 @@
   {{ content }}
 
 </div></div>
-<footer><p> &copy;&nbsp;2011 Paweł Majewski</p></footer>
+<footer><p class="float_right font70"> &copy;&nbsp;2011 Paweł Majewski</p></footer>
 </body>
 </html>
