--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,22 +15,26 @@
 <link rel="stylesheet" href="css/style.css" type="text/css" media="screen, projection" />
 </head>
 <body>
-
+   <header>	
+	<text>Ten blog został stworzony w celu przedstawienia wybranych możliwości
+   	   <m>HTML5</m>
+       </text>
+   </header>
 <div class="site span-21"><!--  showgrid -->
 
   <div class="span-21" id="header">
-    <div id="logo" class="push-1 span-7">
-      <a href="/~pmajewski/blog">Paweł Majewski - blog</a>
-    </div>
+	<div class="float">
+		 <a href="/~pmajewski/blog"><img src="/~pmajewski/blog/images/logo_mini.gif" class="logotyp_mini"></a>
+	</div>
     <div class="span-13 last">
       <div class="append-7" id="links">
         <a href="/~login_na_sigmie">home</a>
       </div>
     </div>
   </div>
-  
+  <article>
   {{ content }}
-
+  </article>
 </div>
 
 </body>
