--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,21 @@
 	{
 	margin-top:10px;
 	margin-left:10px;
-	width:503 px;
-	height:246 px;
-	box-shadow: 30px -20px 20px #999;
+	width:411px;
+	height:201px;
+	box-shadow: 30px 20px 20px #999;
 	-webkit-box-shadow: 30px 20px 20px #999;
 	-moz-box-shadow: 30px 20px 20px #999;
+  }
+.logotyp_mini
+	{
+	margin-top:10px;
+	margin-left:650px;
+	width:200px;
+	height:98px;
+	box-shadow: 10px 10px 10px #999;
+	-webkit-box-shadow: 10px 10px 10px #999;
+	-moz-box-shadow: 10px 10px 10px #999;
   }
 .menu_right
 	{
@@ -79,9 +89,24 @@ header
  text-align: right;
 padding-right:10px;
  }
+header
+{
+ width:940px;
+ text-align: right;
+padding-right:10px;
+ }
 m
 {
 color: #610B0B;
+}
+.float_right
+{
+  float:right;
+  padding-right: 20px;
+}
 
+font70
+{
+font-size: 70%;
 }
      
